# filmes

./: README.md  pyproject.toml
config/: settings.py
core/: admin.py
core/migrations/: 0002_diretores_produtoras_rename_categoria_categorias.py  0003_filmes.py
core/models/: __init__.py  categorias.py  diretores.py  filmes.py  produtoras.py
